--- a/HTML and CSS in depth/Week3/index.html
+++ b/HTML and CSS in depth/Week3/index.html
@@ -24,7 +24,7 @@
     <main>
         <section class="banner">
             <article>
-                <h1>Menu</h1>
+                <h1>30% off This Weekend On All Plants.</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quaerat sapiente ipsa beatae
                     suscipit ad, harum sit delectus quos! Perferendis provident nulla ex hic blanditiis id dolor
                     dignissimos repudiandae quae.</p>
@@ -32,33 +32,41 @@
         </section>
         <section class="cards">
             <article>
+                <h1>Plants</h1>
                 <div class="card-img">
-                    <img src="./img/ar1.jpg" alt="ar1">
+                    <img src="./img/artical1.jpg" alt="artical1-image">
                 </div>
-                <h1>hello</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quaerat sapiente ipsa beatae
                     suscipit ad, harum sit delectus quos! Perferendis provident nulla ex hic blanditiis id dolor
                     dignissimos repudiandae quae.</p>
+                <a href="#">see more plants.</a>
 
             </article>
             <article>
+                <h1>Garden designs</h1>
                 <div class="card-img">
-                    <img src="./img/ar2.jpg" alt="ar2">
+                    <img src="./img/artical2.jpg" alt="artical2-image">
                 </div>
-                <h1>hiii</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quaerat sapiente ipsa beatae
                     suscipit ad, harum sit delectus quos! Perferendis provident nulla ex hic blanditiis id dolor
                     dignissimos repudiandae quae.</p>
+                <a href="#">see more designs.</a>
 
             </article>
             <article>
+                <h1>Working hours</h1>
                 <div class="card-img">
-                    <img src="./img/ar3.jpg" alt="ar3">
+                    <img src="./img/artical3.jpg" alt="artical3-image">
                 </div>
-                <h1>asasd</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quaerat sapiente ipsa beatae
                     suscipit ad, harum sit delectus quos! Perferendis provident nulla ex hic blanditiis id dolor
                     dignissimos repudiandae quae.</p>
+                    <br>
+                    <ul>
+                        <li>Mon-Fri: 2pm - 10pm</li>
+                        <li>Sat: 2pm - 11pm</li>
+                        <li>Sun: 2pm - 9pm</li>
+                    </ul>
 
             </article>
         </section>
